Fixed missing color pallette.

--- a/main.css
+++ b/main.css
@@ -7,13 +7,13 @@ body {
 
 h1 {
     position: fixed;
-    color: whitesmoke;
+    color: white;
 
 } 
 
 h2 {
     position: fixed;
-    color: whitesmoke;
+    color: white;
 }
 
    
